--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -12,6 +12,7 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
+			<family>Source Sans Pro</family>
 			<family>Linux Biolinum</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
@@ -20,6 +21,7 @@
 	<alias>
 		<family>sans</family>
 		<prefer>
+			<family>Source Sans Pro</family>
 			<family>Linux Biolinum</family>
 			<family>Joy Pixels</family>
 			<family>Noto Color Emoji</family>
@@ -28,6 +30,8 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
+			<family>FiraCode Nerd Font</family>
+			<family>SauceCodePro Nerd Font</family>
 			<family>Noto Sans Mono</family>
 			<family>Liberation Mono</family>
 		</prefer>
